--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,12 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 100px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 300px;
   padding: 20px;
   color: white;
 }
@@ -22,7 +21,11 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-footer {
+  font-size: small;
+  text-align: left;
+  padding-left: 10px;
+  position:fixed;
+  bottom:0;
+  width:100%;
 }
