--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@ li {
   list-style: none;
 }
 
+a {
+  color: white;
+  text-decoration: underline;
+}
+
 .App-intro {
   font-size: large;
   width: 80%;
