remove styling from css add style to login form

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -60,4 +60,4 @@ a {
   display: flex;
   align-items: center;
   flex-flow: column nowrap;
-}
+} */
